Fixed to build with JDK 1.4